# -Morse-Code-Tools

./: CMakeLists.txt  Morse-code-tools_zh_CN.ts  MorseWorker.h  README.md  main.cpp  morse.cpp  morse.h  morse.ui
